# zsozso-dioxus

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  NOTICE  README.md  TODO.md  build.sh  bundle.js  bundle_sw.js  gun_bridge.js  index.html  libi18n.rlib  log_bridge.js  manifest.json  qr_scanner_bridge.js  sea_bridge.js  sw.js  wascan.js  wascan_bg.wasm
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
assets/: gun_bridge.js  log_bridge.js  manifest.json  passkey_bridge.js  pwa-install.js  qr_scanner_bridge.js  sw.js
deploy-c/app/: sw.js
deploy-j/app/: index.html  sw.js
deploy-r/app/: index.html  sw.js
deploy-z/app/: sw.js
deploy/app/: index.html
server/: Submit a request – CoinMarketCap.html  log_upload_server.py  nginx.conf  zsozso.info.conf
server/Submit a request – CoinMarketCap_elemei/: en-us.5f9677be0fbeaa8b872b.js  hc_enduser-4ce47203c8f3bf0c09fefd827d190640.js  style.css
src/: i18n.rs  main.rs  sss.rs
src/db/: gundb.rs  mod.rs  network.rs
src/db/gundb/: gundb.rs  mod.rs  sea.rs
src/db/gundb/i18n/: english.rs
src/db/i18n/: english.rs  french.rs  german.rs  hungarian.rs  mod.rs  spanish.rs
src/ledger/: cyf.rs  mod.rs  stellar.rs
src/ledger/i18n/: english.rs  french.rs  german.rs  hungarian.rs  mod.rs  spanish.rs
src/ledger/sc/: mod.rs  proof_of_zsozso_sc.rs  zsozso_sc.rs
src/ledger/sc/i18n/: english.rs  french.rs  german.rs  hungarian.rs  mod.rs  spanish.rs
src/store/: indexed_db.rs  keyring.rs  local_storage.rs  mod.rs  passkey.rs
src/store/i18n/: english.rs  french.rs  german.rs  hungarian.rs  mod.rs  spanish.rs
src/ui/: actions.rs  clipboard.rs  controller.rs  mod.rs  qr_scanner.rs  state.rs  status.rs  toast.rs  view.rs
src/ui/i18n/: english.rs  french.rs  german.rs  hungarian.rs  mod.rs  spanish.rs
src/ui/tabs/: home.rs  info.rs  log.rs  mod.rs  networking.rs  settings.rs  zsozso.rs
test/: p256.mjs  sea_pair_deterministic.mjs  sea_pair_sign_verify.mjs
