[package]
name = "zsozso"
version = "0.1.0"
edition = "2024"

[dependencies]
# === UI Framework ===
dioxus = { version = "0.7.3", features = ["desktop"] }

# === Hálózat ===
reqwest = { version = "0.12", features = ["json"] }   # Marad 0.12 - a Dioxus-szal kompatibilis

# === Sorosítás (Serialization) ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === Kriptográfia ===
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2.1"

# === Stellar Network ===
stellar-xdr = { version = "25.0.0", features = ["curr", "base64", "std"] }
stellar-strkey = "0.0.13"

# === Biztonság ===
rand = "0.9"
zeroize = { version = "1.8", features = ["derive"] }  # 1.7 → 1.8

# === Platform / Desktop ===
arboard = "3.4"             # 3.3 → 3.4 (bugfixek, Windows PNG támogatás)
tokio = { version = "1", features = ["time", "rt-multi-thread"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
keyring = { version = "3.6", features = ["sync-secret-service", "linux-native"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }

# === Naplózás (Logging) ===
tracing = "0.1"
tracing-wasm = { version = "0.2", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"