[package]
name = "zsozso"
version = "0.1.0"
edition = "2024"

[features]
default = ["web"]
web = ["dioxus/web", "dep:web-sys", "dep:wasm-bindgen", "dep:js-sys", "dep:gloo-timers", "dep:wasm-bindgen-futures", "getrandom/wasm_js"]

[dependencies]
# === UI Framework ===
dioxus = "0.7.3"

# === Network ===
reqwest = { version = "0.12", features = ["json"] }

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === Cryptography ===
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2.1"

# === Stellar Network ===
stellar-xdr = { version = "25.0.0", features = ["curr", "base64", "std"] }
stellar-strkey = "0.0.13"

# === Security ===
rand = "0.9"
zeroize = { version = "1.8", features = ["derive"] }
getrandom = "0.3"

# === QR Code ===
qrcode = "0.14"

# === Logging ===
tracing = "0.1"

# === IndexedDB for secrets ===
rexie = "0.6"

# === Platform / Web ===
web-sys = { version = "0.3", features = ["Window", "Storage", "Navigator", "Clipboard"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"